Use SignalR to notify remotely logged-out user to redirect to the login page

--- a/AspNetCoreIdentity/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreIdentity/Views/Shared/_Layout.cshtml
@@ -51,6 +51,7 @@
     <environment names="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/signalr/jquery.signalR.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment names="Staging,Production">
@@ -66,9 +67,12 @@
                 crossorigin="anonymous"
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
+        <script src="~/lib/signalr/jquery.signalR.min.js"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
     @RenderSection("Scripts", required: false)
+    @await Html.PartialAsync("_NotificationsPartial")
+
 </body>
 </html>
